# tinyrenderer

./: .gitignore  CMakeLists.txt  XMath.h  build.sh  common.cpp  common.h  demo_drawline.cpp  demo_drawobj.cpp  demo_drawtriangle.cpp  framebuffer.tga  main.cpp  mesh.cpp  mesh.h  object.cpp  object.h  profile_report.txt  tgaimage.h
